# MiniCoin

./: BlockChain.cabal  LICENSE  commands.txt  stack.yaml
app/: Main.hs
keysDir/: k1.key  k2.key
src/: BlockChain.hs  Logger.hs  Server.hs  State.hs  Transaction.hs  Types.hs
src/Control/Concurrent/: Extended.hs
src/Control/Logging/: Extended.hs
src/Crypto/: Extended.hs  HexText.hs  KeyParser.hs  Merkle.hs
